# tyrannotext

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
debug_script/: main.py
examples/: first_example.ipynb
pdf_extractor/: dom.py
tyrannotext/: configs.py  dom.py  extractor.py  old.py  utils.py
