[project]
name = "tyrannotext"
packages = ['tyrannotext']
version = "0.0.1"
authors = [
  { name="Daniele Castellana", email="danielecastellana22@gmail.com" },
]
description = "A package to extract text from pdf"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pymupdf~=1.24.4',
]

[project.urls]
Homepage = "https://github.com/danielecastellana22/tyrannotext"